# text-editor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  texteditor.desktop
.github/workflows/: build.yml
